[package]
name = "sudoku-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-bls12-381 = { version = "0.4" }
ark-r1cs-std = { version = "0.4" }
ark-snark = { version = "0.4" }
ark-relations = { version = "0.4" }
ark-groth16 = { version = "0.4" }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["snark" , "sponge", "crh", "r1cs"] }
ark-std = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.4.3", features = ["serde"]}
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[dev-dependencies]
itertools = "0.10.1"
